--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -10,11 +10,11 @@
     {
         if (_globalState.CurrentUser == null)
         {
-            NavManager.NavigateTo("/login");
+            NavManager.NavigateTo("/login");     //Straight Navigate to login page
         }
         else
         {
-            NavManager.NavigateTo("/");
+            NavManager.NavigateTo("/");    // Or To home page
         }
     }
 }
