--- a/Components/Pages/ModalDialog.razor
+++ b/Components/Pages/ModalDialog.razor
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" @onclick="@ModalCancel">Cancel</button>
-                <button type="button" class="btn btn-primary" @onclick=@ModalOk>@OkLabel</button>
+                <button type="button" class="btn btn-primary" @onclick=@ModalOk>@OkLabel</button>      @* Shows ModalDialog in every page *@
             </div>
         </div>
     </div>
@@ -20,13 +20,13 @@
     [Parameter]
     public string Title { get; set; }
     [Parameter]
-    public RenderFragment ChildContent { get; set; }
+    public RenderFragment ChildContent { get; set; }                  //Rendering
 
     [Parameter]
     public string OkLabel { get; set; }
 
     [Parameter]
-    public EventCallback<bool> OnClose { get; set; }
+    public EventCallback<bool> OnClose { get; set; }                 //EventCallBack
 
     private Task ModalCancel()
     {
