--- a/Components/Pages/Coffee.razor
+++ b/Components/Pages/Coffee.razor
@@ -12,7 +12,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Name</th>
+            <th>Name</th>         @* TableHead for Coffee Page *@
             <th>Price</th>
             <th>Created At</th>
             <th>Actions</th>
@@ -40,7 +40,7 @@
 </table>
 @if (_showAddCofeeDialog)
 {
-    <ModalDialog Title="@_dialogTitle" OkLabel="@_dialogOkLabel" OnClose="@OnAddCoffeeDialogClose">
+    <ModalDialog Title="@_dialogTitle" OkLabel="@_dialogOkLabel" OnClose="@OnAddCoffeeDialogClose">         @* Using Data from Modal Dialog *@
         <form>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control " @bind="_name" placeholder="Name" />
@@ -58,7 +58,7 @@
     </ModalDialog>
 }
 @code {
-    private Guid? _id { get; set; } = null;
+    private Guid? _id { get; set; } = null;           // Inport from Coffee.cs
     private string _name { get; set; }
     private string _price { get; set; }
     private GlobalState _globalState { get; set; }
@@ -72,7 +72,7 @@
     {
         _coffee = CoffeeService.GetAll();
     }
-    private void OpenAddCoffeeDialog()
+    private void OpenAddCoffeeDialog()    /* Add Coffee */
     {
         _dialogTitle = "Add Coffee";
         _dialogOkLabel = "Add";
@@ -126,7 +126,7 @@
                     }
 
                     var json = JsonSerializer.Serialize(coffee);
-                    File.WriteAllText(Utility.GetAppCoffeeFilePath(), json);
+                    File.WriteAllText(Utility.GetAppCoffeeFilePath(), json);    //Reading JSON File from CoffeeService
                     _coffee = CoffeeService.GetAll();
                     _showAddCofeeDialog = false;
                 }
@@ -159,7 +159,7 @@
     {
         try
         {
-            List<Coffees> coffee = CoffeeService.GetAll();
+            List<Coffees> coffee = CoffeeService.GetAll();     //Using List to get Service
             _id = coff.Id;
             Coffees c = coffee.FirstOrDefault(x => x.Id == _id);
             if (c == null)
